# bakehouse

./: .bakehouse.example  .gitignore  Cargo.toml  Justfile  README.md
sample/: .gitignore  package.json
sample/apps/admin/: package.json
sample/apps/admin/src/: App.tsx
sample/apps/api/: package.json
sample/apps/api/src/: index.ts
src/: bake.rs  config.rs  dockerfile.rs  main.rs  resolvers.rs  workspace.rs
src/resolvers/: pnpm.rs
src/resolvers/pnpm/: model.rs
src/templates/: Dockerfile.bake.tera  Dockerfile.root.tera  Dockerfile.tera
tests/: integration_test.rs
