[package]
name = "bakehouse"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to generate Docker Bake files for PNPM monorepos"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
glob = "0.3"
serde_yaml = "0.9"
petgraph = "0.6"
walkdir = "2.4"
hcl-rs = "0.16.6"
indexmap = "2.1"

[dev-dependencies]
assert_fs = "1.1"
predicates = "3.1"
serde_json = "1.0"
tokio = { version = "1.36", features = ["full", "test-util"] } 